# h5dantic

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/h5dantic/: __init__.py  model.py
tests/: _public_test.py  model_test.py
